.travis.yml: use pretty output for cucumber tests and disable colors.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - mvn --batch-mode pmd:check | egrep -v '^\[INFO\] Download(ing|ed):' | tee pmd.log; ! fgrep -qs '[ERROR]' pmd.log
   - mvn --batch-mode license:check | egrep -v '^\[INFO\] Download(ing|ed):' | tee licence.log; ! fgrep -qs '[ERROR]' licence.log
   - find src -type f -name '*.html' | xargs bootlint
-  - mvn --batch-mode verify | egrep -v '^\[INFO\] Download(ing|ed):' | tee verify.log; ! fgrep -qs '[ERROR]' verify.log
+  - mvn --batch-mode verify -Dcucumber.options="--plugin pretty --monochrome" | egrep -v '^\[INFO\] Download(ing|ed):' | tee verify.log; ! fgrep -qs '[ERROR]' verify.log
   - mvn --batch-mode jasmine:test | egrep -v '^\[INFO\] Download(ing|ed):' | tee jasmine.log; ! fgrep -qs '[ERROR]' jasmine.log
 after_success:
   - mvn --batch-mode jacoco:prepare-agent test jacoco:report coveralls:jacoco | egrep -v '^\[INFO\] Download(ing|ed):' | tee jacoco.log; ! fgrep -qs '[ERROR]' jacoco.log
